Updated to add sorting to the users list and added a basic styleguide
